<resources>
    <string name="app_name">Rmim</string>

    <string name="collection">Collection</string>
    <string name="collection_browse_directories">Browse Directories</string>
    <string name="collection_random_albums">Random Albums</string>
    <string name="collection_recently_added">Recently Added</string>
    <string name="collection_playlists">Playlists</string>

    <string name="collection_smart_search_directories">Search Directories</string>
    <string name="collection_smart_search_button">Search</string>
    <string name="browse_error">An error occurred while listing content</string>
    <string name="browse_error_retry">Retry</string>
    <string name="browse_disc_number">Disc %1$d</string>

    <string name="smart_search_collection">Search</string>
    <string name="smart_search_error">An error occurred while listing content</string>
    <string name="smart_search_error_retry">Retry</string>
    <string name="smart_search_disc_number">Disc %1$d</string>
    <string name="smart_search_hints">App allows searching specific fields in the tag. The allowed fields are artist, album_artist, composer, lyricist, album, title, genre and year. A set of words can be delimited with " or \' Ex: composer:'first last name' or title:hello. Year can be single year(year:1975) or a range(year:1975–1985).</string>
    <string name="smart_search_queue_all">Queue all search results</string>

    <string name="queue">Queue</string>
    <string name="queue_empty">Make a playlist by swiping music from your collection to here.</string>
    <string name="queue_downloading">Downloading</string>
    <string name="queue_cached">Cached Locally</string>

    <string name="search_empty">Search something composer:"some name".</string>
    <string name="search_downloading">Downloading</string>
    <string name="search_cached">Cached Locally</string>


    <string name="now_playing">Now Playing</string>
    <string name="player_artwork">Album Artwork</string>
    <string name="player_previous_track">Previous Track</string>
    <string name="player_next_track">Next Track</string>
    <string name="player_play_pause">Play/Pause</string>
    <string name="player_play">Play</string>
    <string name="player_pause">Pause</string>
    <string name="player_opening">Opening…</string>
    <string name="player_buffering">Buffering…</string>
    <string name="player_unknown">unknown</string>

    <string name="details">Details</string>
    <string name="details_title">Title</string>
    <string name="details_album">Album</string>
    <string name="details_year">Year</string>
    <string name="details_artist">Artist</string>
    <string name="details_album_artist">Album Artist</string>
    <string name="details_track_number">Track Number</string>
    <string name="details_disc_number">Disc Number</string>
    <string name="details_duration">Duration</string>

    <string name="player_track_info">Track Info</string>

    <!-- Labels don't change when track changes -->
    <string name="title_label">Title: </string>
    <string name="album_label">Album: </string>
    <string name="artist_label">Artist: </string>
    <string name="composer_label">Composer: </string>
    <string name="lyricist_label">Lyricist: </string>
    <string name="genre_label">Genre: </string>
    <string name="album_artist_label">Album Artist: </string>
    <string name="year_label">Year: </string>
    <string name="duration_label">Duration: </string>
    <string name="track_number_label">Track#: </string>
    <string name="disc_number_label">Disc#: </string>
    <string name="copyright_label">Copyright: </string>

    <!-- Fields change when track changes -->
    <string name="title_field">""</string>
    <string name="album_field">""</string>
    <string name="artist_field">""</string>
    <string name="composer_field">""</string>
    <string name="lyricist_field">""</string>
    <string name="genre_field">""</string>
    <string name="album_artist_field">""</string>
    <string name="year_field">""</string>
    <string name="duration_field">""</string>
    <string name="track_number_field">""</string>
    <string name="disc_number_field">""</string>
    <string name="copyright_field">""</string>

    <string name="pref_server_url">Server address</string>
    <string name="pref_username">Username</string>
    <string name="pref_password">Password</string>
    <string name="pref_offline">Offline Mode</string>
    <string name="pref_num_songs_preload">Songs to preload</string>
    <string name="pref_offline_cache_size">Offline cache size</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_enable_rj">Rj Mode</string>

    <string name="pref_key_server_url">server</string>
    <string name="pref_key_username">username</string>
    <string name="pref_key_password">password</string>
    <string name="pref_key_offline">offline</string>
    <string name="pref_key_num_songs_preload">num_songs_preload</string>
    <string name="pref_key_offline_cache_size">offline_cache_size</string>
    <string name="pref_key_theme">theme</string>
    <string name="pref_key_enable_rj">enable_rj</string>

    <string name="settings">Settings</string>
    <string name="clear">Clear</string>
    <string name="shuffle">Shuffle</string>

    <string name="ordering">Ordering</string>
    <string name="ordering_sequence">Default</string>
    <string name="ordering_repeat_one">Repeat One</string>
    <string name="ordering_repeat_all">Repeat All</string>

    <string name="add_to_queue">Queue</string>
    <string name="queued">Added to queue</string>
    <string name="queuing">Fetching…</string>
    <string name="queuing_error">Something went wrong</string>
    <string name="album_artwork">Album Artwork</string>
    <string name="playback_error">A media playback error occurred</string>

    <string name="media_player_service_description">Audio playback service for Rmim</string>
    <string name="download_service_description">Music download service for Rmim</string>
    <string name="scrobble_service_description">Last.fm scrobbling service for Rmim</string>

    <string name="media_notifications_channel_description">Rmim audio playback controls</string>
</resources>
